# shadow9-manager

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup  setup.bat  shadow9  shadow9.bat
config/: config.yaml  test-config.yaml
src/shadow9/: __init__.py  __main__.py  auth.py  bridge_list.py  bridges.py  cli.py  config.py  logging_utils.py  menu.py  paths.py  security.py  setup.py  socks5_client.py  socks5_server.py  tor_connector.py  ui.py  user_wizard.py
src/shadow9/api/: __init__.py  app.py  deps.py
src/shadow9/api/endpoints/: __init__.py  health.py  server.py  users.py
src/shadow9/commands/: __init__.py  api.py  server.py  service.py  user.py  utils.py
src/shadow9/core/: __init__.py  api_config.py  config.py  logging.py
src/shadow9/models/: __init__.py  server.py  user.py
src/shadow9/repositories/: __init__.py  base.py  user_repository.py
src/shadow9/schemas/: __init__.py  common.py  server.py  user.py
src/shadow9/services/: __init__.py  auth_service.py  user_service.py
src/shadow9/wizards/: __init__.py  api_setup.py  init_wizard.py  serve.py  user_enable_disable.py  user_info.py  user_list.py  user_modify.py  user_new.py  user_remove.py
tests/: __init__.py  test_api.py  test_auth.py  test_models.py  test_schemas.py  test_socks5_server.py
